Fix broken entries in tree view (with cleanup of obsolete code)

Adding multiple items of the same type in the tree view resulted in broken
items. Fixed by calling createItem() directly when adding an object in
treeview. Renaming of items seems to work fine, in contrast to what the commit
message of 0d010aa states.

BUG: 317602
FIXED-IN:4.11.2